[gd_scene load_steps=63 format=3 uid="uid://b8oeiuufqe32c"]

[ext_resource type="Script" path="res://rooms/lab0/simple_ecs.gd" id="1_1ps8v"]
[ext_resource type="Script" path="res://data/StaticData.gd" id="2_2epi3"]
[ext_resource type="PackedScene" uid="uid://br3o7pgduj72n" path="res://rooms/demo0/map_demo_0.tscn" id="3_tda2n"]
[ext_resource type="Script" path="res://src/utils/global_singletons.gd" id="4_4lskg"]
[ext_resource type="Script" path="res://addons/gs_ecs/world.gd" id="4_wplyx"]
[ext_resource type="PackedScene" uid="uid://ex31s4wv3adg" path="res://src/entities/en_single_server.tscn" id="5_gpsy3"]
[ext_resource type="Script" path="res://src/network/co_transport_loopback.gd" id="5_r2rkq"]
[ext_resource type="Script" path="res://src/network/debug/co_state_log.gd" id="6_8qi11"]
[ext_resource type="PackedScene" uid="uid://hmishy6acfrk" path="res://src/entities/en_raycast_singleton.tscn" id="8_ry87g"]
[ext_resource type="Script" path="res://src/systems/sy_velocity.gd" id="9_rrivg"]
[ext_resource type="Script" path="res://src/systems/sy_player_input.gd" id="10_47ome"]
[ext_resource type="PackedScene" uid="uid://5n6bvvfq608d" path="res://src/entities/en_single_actors.tscn" id="10_k0r3w"]
[ext_resource type="Script" path="res://src/systems/sy_actor_movement.gd" id="11_1eesg"]
[ext_resource type="Script" path="res://src/components/co_single_world.gd" id="12_8x65i"]
[ext_resource type="Script" path="res://src/systems/sy_shoot_weapon.gd" id="12_dhgio"]
[ext_resource type="Script" path="res://src/systems/sy_reload_weapon.gd" id="13_5ywtb"]
[ext_resource type="Script" path="res://src/network/wync/co_single_wync_context.gd" id="13_ckh8x"]
[ext_resource type="Script" path="res://src/systems/sy_switch_weapon.gd" id="14_4qbu2"]
[ext_resource type="PackedScene" uid="uid://dp7hr35om6ih8" path="res://src/entities/en_ball.tscn" id="15_h11ql"]
[ext_resource type="Script" path="res://src/systems/sy_health.gd" id="15_uanrs"]
[ext_resource type="Script" path="res://src/systems/sy_projectile_movement.gd" id="16_5f1s6"]
[ext_resource type="Script" path="res://src/network/latency_compensation/sy_net_receive_inputs.gd" id="16_egyqr"]
[ext_resource type="Script" path="res://src/network/sy_nete_loopback_peer_register.gd" id="17_320aq"]
[ext_resource type="Script" path="res://src/network/wync/setup_wync_server.gd" id="17_gxp01"]
[ext_resource type="PackedScene" uid="uid://c3k6qrqk6sch4" path="res://src/entities/en_block_grid.tscn" id="17_y8ubi"]
[ext_resource type="Script" path="res://src/network/sy_ticks.gd" id="18_oeqdo"]
[ext_resource type="Script" path="res://src/network/sy_nete_loopback_connect_req.gd" id="19_56q07"]
[ext_resource type="Script" path="res://src/systems/sy_actor_register.gd" id="19_rcs17"]
[ext_resource type="Script" path="res://src/network/wync/sy_wync_receive_apply_inputs.gd" id="21_1k058"]
[ext_resource type="Script" path="res://src/systems/sy_ball_movement.gd" id="21_bjix6"]
[ext_resource type="Script" path="res://src/network/sy_nete_loopback.gd" id="21_rayuf"]
[ext_resource type="PackedScene" uid="uid://dqillnt7k6deb" path="res://src/entities/en_client.tscn" id="22_c1lim"]
[ext_resource type="PackedScene" uid="uid://4o33ca5n1fw6" path="res://src/entities/en_player.tscn" id="23_ewwho"]
[ext_resource type="Script" path="res://src/network/co_ticks.gd" id="25_7a4bi"]
[ext_resource type="Script" path="res://src/systems/sy_ball_draw.gd" id="26_nb7xe"]
[ext_resource type="PackedScene" uid="uid://d170xboi2dsfr" path="res://src/ui/info.tscn" id="26_sokx8"]
[ext_resource type="Script" path="res://src/network/latency_compensation/co_single_net_prediction_data.gd" id="26_uu4uh"]
[ext_resource type="Script" path="res://src/network/sy_net_clock_server.gd" id="29_a0he2"]
[ext_resource type="Script" path="res://src/network/latency_compensation/co_flag_net_self_predict.gd" id="30_jafaw"]
[ext_resource type="Script" path="res://src/network/latency_compensation/co_net_buffered_inputs.gd" id="31_10fi0"]
[ext_resource type="Script" path="res://src/systems/sy_draw_block_grid.gd" id="31_vohxg"]
[ext_resource type="Script" path="res://addons/gs_ecs/group.gd" id="32_wj45u"]
[ext_resource type="Script" path="res://src/network/wync/sy_wync_state_extractor.gd" id="34_bmka7"]
[ext_resource type="Script" path="res://src/network/wync/sy_wync_setup_sync_player.gd" id="35_m1lky"]
[ext_resource type="Script" path="res://src/network/sy_nete_loopback_connect_res.gd" id="37_0dn44"]
[ext_resource type="Script" path="res://src/network/wync/sy_wync_setup_sync_block_grid.gd" id="38_g8ek6"]
[ext_resource type="Script" path="res://src/network/wync/sy_wync_connect_res.gd" id="38_kvckb"]
[ext_resource type="Script" path="res://src/network/latency_compensation/sy_net_latency_stable.gd" id="38_vuulq"]
[ext_resource type="Script" path="res://src/network/latency_compensation/co_flag_net_extrapolate.gd" id="39_x655r"]
[ext_resource type="Script" path="res://src/network/latency_compensation/sy_net_prediction_ticks.gd" id="40_ailwx"]
[ext_resource type="Script" path="res://src/network/sy_nete_cleanup.gd" id="40_dopds"]
[ext_resource type="Script" path="res://src/network/latency_compensation/sy_net_clock_client.gd" id="45_6w0w5"]
[ext_resource type="Script" path="res://src/network/wync/sy_wync_setup_sync_ball.gd" id="49_4ofub"]
[ext_resource type="Script" path="res://src/network/wync/sy_wync_lerp.gd" id="49_dsdhr"]
[ext_resource type="Script" path="res://src/network/wync/sy_wync_buffered_inputs.gd" id="50_jvul8"]
[ext_resource type="Script" path="res://src/network/wync/sy_wync_save_confirmed_states.gd" id="52_65fst"]
[ext_resource type="Script" path="res://src/network/wync/sy_wync_xtrap.gd" id="53_qmyp1"]
[ext_resource type="Script" path="res://src/network/wync/sy_wync_receive_client_info.gd" id="55_wsisn"]
[ext_resource type="Script" path="res://src/network/wync/sy_wync_send_inputs.gd" id="56_1fh53"]
[ext_resource type="Script" path="res://src/network/wync/sy_wync_latest_value.gd" id="56_x35pt"]
[ext_resource type="Script" path="res://src/network/wync/sy_wync_connect_req.gd" id="58_gjl0a"]
[ext_resource type="Script" path="res://src/network/wync/sy_user_wync_lerp_set.gd" id="61_cqch1"]

[node name="Lab2" type="Node2D"]
script = ExtResource("1_1ps8v")

[node name="StaticData" type="Node" parent="."]
script = ExtResource("2_2epi3")

[node name="EnMap" type="Node2D" parent="."]

[node name="MapDemo0" parent="EnMap" instance=ExtResource("3_tda2n")]

[node name="GlobalSingletons" type="Node" parent="."]
script = ExtResource("4_4lskg")

[node name="CoTransportLoopback" type="Node" parent="GlobalSingletons"]
unique_name_in_owner = true
script = ExtResource("5_r2rkq")

[node name="CoStateLog" type="Node" parent="GlobalSingletons"]
script = ExtResource("6_8qi11")

[node name="worlds" type="Node" parent="."]

[node name="WorldServer" type="Node" parent="worlds"]
script = ExtResource("4_wplyx")

[node name="Singletons" type="Node" parent="worlds/WorldServer"]

[node name="CoTicks" type="Node" parent="worlds/WorldServer/Singletons"]
unique_name_in_owner = true
script = ExtResource("25_7a4bi")
singleton = true

[node name="EnSingleActors" parent="worlds/WorldServer/Singletons" instance=ExtResource("10_k0r3w")]
singleton = true

[node name="EnSingleServer" parent="worlds/WorldServer/Singletons" instance=ExtResource("5_gpsy3")]
singleton = true

[node name="EnRaycastSingleton" parent="worlds/WorldServer/Singletons" instance=ExtResource("8_ry87g")]

[node name="CoSingleWorld" type="Node" parent="worlds/WorldServer/Singletons"]
script = ExtResource("12_8x65i")
singleton = true

[node name="CoSingleWyncContext" type="Node" parent="worlds/WorldServer/Singletons"]
script = ExtResource("13_ckh8x")
singleton = true

[node name="Entities" type="Node" parent="worlds/WorldServer"]

[node name="EnPlayer" parent="worlds/WorldServer/Entities" instance=ExtResource("23_ewwho")]
position = Vector2(110, 228)

[node name="CoNetBufferedInputs" type="Node" parent="worlds/WorldServer/Entities/EnPlayer"]
script = ExtResource("31_10fi0")

[node name="EnBallLerp" parent="worlds/WorldServer/Entities" instance=ExtResource("15_h11ql")]
position = Vector2(100, 382)

[node name="EnBallExtra" parent="worlds/WorldServer/Entities" instance=ExtResource("15_h11ql")]
position = Vector2(114, 414)

[node name="EnBlockGrid" parent="worlds/WorldServer/Entities" instance=ExtResource("17_y8ubi")]
position = Vector2(358, 28)

[node name="SetupSystems" type="Node" parent="worlds/WorldServer"]

[node name="SetupWyncServer" type="Node" parent="worlds/WorldServer/SetupSystems"]
script = ExtResource("17_gxp01")

[node name="GroupPhysics" type="Node" parent="worlds/WorldServer"]
script = ExtResource("32_wj45u")

[node name="SystemsGameplay" type="Node" parent="worlds/WorldServer/GroupPhysics"]

[node name="SyVelocity" type="Node" parent="worlds/WorldServer/GroupPhysics/SystemsGameplay"]
script = ExtResource("9_rrivg")

[node name="SyNetReceiveInputs" type="Node" parent="worlds/WorldServer/GroupPhysics/SystemsGameplay"]
script = ExtResource("16_egyqr")
ENABLED = false

[node name="SyWyncReceiveApplyInputs" type="Node" parent="worlds/WorldServer/GroupPhysics/SystemsGameplay"]
script = ExtResource("21_1k058")

[node name="SyPlayerInput" type="Node" parent="worlds/WorldServer/GroupPhysics/SystemsGameplay"]
script = ExtResource("10_47ome")
ENABLED = false

[node name="SyActorMovement" type="Node" parent="worlds/WorldServer/GroupPhysics/SystemsGameplay"]
script = ExtResource("11_1eesg")

[node name="SyBallMovement" type="Node" parent="worlds/WorldServer/GroupPhysics/SystemsGameplay"]
script = ExtResource("21_bjix6")

[node name="SyShootWeapon" type="Node" parent="worlds/WorldServer/GroupPhysics/SystemsGameplay"]
script = ExtResource("12_dhgio")

[node name="SyReloadWeapon" type="Node" parent="worlds/WorldServer/GroupPhysics/SystemsGameplay"]
script = ExtResource("13_5ywtb")

[node name="SySwitchWeapon" type="Node" parent="worlds/WorldServer/GroupPhysics/SystemsGameplay"]
script = ExtResource("14_4qbu2")

[node name="SyHealth" type="Node" parent="worlds/WorldServer/GroupPhysics/SystemsGameplay"]
script = ExtResource("15_uanrs")

[node name="SyProjectileMovement" type="Node" parent="worlds/WorldServer/GroupPhysics/SystemsGameplay"]
script = ExtResource("16_5f1s6")

[node name="SyDrawBlockGridNode2D" type="Node2D" parent="worlds/WorldServer/GroupPhysics/SystemsGameplay"]
script = ExtResource("31_vohxg")

[node name="SystemsNetwork" type="Node" parent="worlds/WorldServer/GroupPhysics"]

[node name="SyActorRegister" type="Node" parent="worlds/WorldServer/GroupPhysics/SystemsNetwork"]
script = ExtResource("19_rcs17")

[node name="SyTransportLoopbackPeerRegister" type="Node" parent="worlds/WorldServer/GroupPhysics/SystemsNetwork"]
script = ExtResource("17_320aq")

[node name="SyNetClockServer" type="Node" parent="worlds/WorldServer/GroupPhysics/SystemsNetwork"]
script = ExtResource("29_a0he2")

[node name="SyNeteLoopbackConnectRes" type="Node" parent="worlds/WorldServer/GroupPhysics/SystemsNetwork"]
script = ExtResource("37_0dn44")

[node name="SystemsWync" type="Node" parent="worlds/WorldServer/GroupPhysics"]

[node name="SyWyncSetupSyncBall" type="Node" parent="worlds/WorldServer/GroupPhysics/SystemsWync"]
script = ExtResource("49_4ofub")

[node name="SyWyncSetupSyncPlayer" type="Node" parent="worlds/WorldServer/GroupPhysics/SystemsWync"]
script = ExtResource("35_m1lky")

[node name="SyWyncSetupSyncBlockGrid" type="Node" parent="worlds/WorldServer/GroupPhysics/SystemsWync"]
script = ExtResource("38_g8ek6")

[node name="SyWyncStateExtractor" type="Node" parent="worlds/WorldServer/GroupPhysics/SystemsWync"]
script = ExtResource("34_bmka7")
COMPONENTS = null

[node name="SyWyncConnectRes" type="Node" parent="worlds/WorldServer/GroupPhysics/SystemsWync"]
script = ExtResource("38_kvckb")

[node name="SyTicks" type="Node" parent="worlds/WorldServer/GroupPhysics"]
script = ExtResource("18_oeqdo")

[node name="SyNeteCleanup" type="Node" parent="worlds/WorldServer/GroupPhysics"]
script = ExtResource("40_dopds")

[node name="GroupProcess" type="Node" parent="worlds/WorldServer"]
script = ExtResource("32_wj45u")

[node name="SyNeteLoopback" type="Node" parent="worlds/WorldServer/GroupProcess"]
script = ExtResource("21_rayuf")

[node name="SyBallDraw" type="Node" parent="worlds/WorldServer/GroupProcess"]
script = ExtResource("26_nb7xe")

[node name="WorldClient1" type="Node" parent="worlds"]
script = ExtResource("4_wplyx")

[node name="Singletons" type="Node" parent="worlds/WorldClient1"]

[node name="CoTicks" type="Node" parent="worlds/WorldClient1/Singletons"]
script = ExtResource("25_7a4bi")
ticks_initial_value = 150
time_ms_offset = 5100
singleton = true

[node name="CoSingleNetPredictionData" type="Node" parent="worlds/WorldClient1/Singletons"]
unique_name_in_owner = true
script = ExtResource("26_uu4uh")
singleton = true

[node name="EnSingleActors" parent="worlds/WorldClient1/Singletons" instance=ExtResource("10_k0r3w")]
singleton = true

[node name="EnRaycastSingleton" parent="worlds/WorldClient1/Singletons" instance=ExtResource("8_ry87g")]
position = Vector2(113, 345)
singleton = false

[node name="CoSingleWorld" type="Node" parent="worlds/WorldClient1/Singletons"]
script = ExtResource("12_8x65i")
world_id = 1
singleton = true

[node name="EnSingleClient" parent="worlds/WorldClient1/Singletons" instance=ExtResource("22_c1lim")]
singleton = true

[node name="CoSingleWyncContext" type="Node" parent="worlds/WorldClient1/Singletons"]
script = ExtResource("13_ckh8x")
singleton = true

[node name="Entities" type="Node" parent="worlds/WorldClient1"]

[node name="EnPlayer2" parent="worlds/WorldClient1/Entities" instance=ExtResource("23_ewwho")]
modulate = Color(1, 0.137255, 1, 1)
position = Vector2(110, 228)

[node name="CoFlagNetSelfPredict" type="Node" parent="worlds/WorldClient1/Entities/EnPlayer2"]
script = ExtResource("30_jafaw")

[node name="CoNetBufferedInputs" type="Node" parent="worlds/WorldClient1/Entities/EnPlayer2"]
script = ExtResource("31_10fi0")

[node name="EnBallLerp" parent="worlds/WorldClient1/Entities" instance=ExtResource("15_h11ql")]
modulate = Color(0.9545, 0.756308, 0.0831867, 1)
position = Vector2(146, 290)

[node name="CoFlagNetExtrapolate" type="Node" parent="worlds/WorldClient1/Entities/EnBallLerp"]
script = ExtResource("39_x655r")

[node name="EnBallExtra" parent="worlds/WorldClient1/Entities" instance=ExtResource("15_h11ql")]
modulate = Color(0.30377, 1, 0.358399, 1)
position = Vector2(179, 291)

[node name="CoFlagNetExtrapolate" type="Node" parent="worlds/WorldClient1/Entities/EnBallExtra"]
script = ExtResource("39_x655r")

[node name="EnBlockGrid" parent="worlds/WorldClient1/Entities" instance=ExtResource("17_y8ubi")]
position = Vector2(358, 28)

[node name="GroupPhysics" type="Node" parent="worlds/WorldClient1"]
script = ExtResource("32_wj45u")

[node name="SystemsGameplay" type="Node" parent="worlds/WorldClient1/GroupPhysics"]

[node name="SyPlayerInput" type="Node" parent="worlds/WorldClient1/GroupPhysics/SystemsGameplay"]
script = ExtResource("10_47ome")

[node name="SyActorMovement" type="Node" parent="worlds/WorldClient1/GroupPhysics/SystemsGameplay"]
script = ExtResource("11_1eesg")
ENABLED = false

[node name="SyShootWeapon" type="Node" parent="worlds/WorldClient1/GroupPhysics/SystemsGameplay"]
script = ExtResource("12_dhgio")
ENABLED = false

[node name="SyReloadWeapon" type="Node" parent="worlds/WorldClient1/GroupPhysics/SystemsGameplay"]
script = ExtResource("13_5ywtb")
ENABLED = false

[node name="SySwitchWeapon" type="Node" parent="worlds/WorldClient1/GroupPhysics/SystemsGameplay"]
script = ExtResource("14_4qbu2")
ENABLED = false

[node name="SyHealth" type="Node" parent="worlds/WorldClient1/GroupPhysics/SystemsGameplay"]
script = ExtResource("15_uanrs")
ENABLED = false

[node name="SyProjectileMovement" type="Node" parent="worlds/WorldClient1/GroupPhysics/SystemsGameplay"]
script = ExtResource("16_5f1s6")
ENABLED = false

[node name="SyDrawBlockGridNode2D" type="Node2D" parent="worlds/WorldClient1/GroupPhysics/SystemsGameplay"]
script = ExtResource("31_vohxg")

[node name="SystemsNetwork" type="Node" parent="worlds/WorldClient1/GroupPhysics"]

[node name="SyActorRegister" type="Node" parent="worlds/WorldClient1/GroupPhysics/SystemsNetwork"]
script = ExtResource("19_rcs17")

[node name="SyNetLatencyStable" type="Node" parent="worlds/WorldClient1/GroupPhysics/SystemsNetwork"]
script = ExtResource("38_vuulq")

[node name="SyNetPredictionTicks" type="Node" parent="worlds/WorldClient1/GroupPhysics/SystemsNetwork"]
script = ExtResource("40_ailwx")

[node name="SyNeteTransportLoopbackPeerRegister" type="Node" parent="worlds/WorldClient1/GroupPhysics/SystemsNetwork"]
script = ExtResource("17_320aq")

[node name="SyNeteLoopbackConnectReq" type="Node" parent="worlds/WorldClient1/GroupPhysics/SystemsNetwork"]
script = ExtResource("19_56q07")

[node name="SyWyncSendInputs" type="Node" parent="worlds/WorldClient1/GroupPhysics/SystemsNetwork"]
script = ExtResource("56_1fh53")

[node name="SystemsWync" type="Node" parent="worlds/WorldClient1/GroupPhysics"]

[node name="SyWyncBufferedInputs" type="Node" parent="worlds/WorldClient1/GroupPhysics/SystemsWync"]
script = ExtResource("50_jvul8")

[node name="SyWyncSetupSyncBall" type="Node" parent="worlds/WorldClient1/GroupPhysics/SystemsWync"]
script = ExtResource("49_4ofub")

[node name="SyWyncSetupSyncPlayer" type="Node" parent="worlds/WorldClient1/GroupPhysics/SystemsWync"]
script = ExtResource("35_m1lky")

[node name="SyWyncSetupSyncBlockGrid" type="Node" parent="worlds/WorldClient1/GroupPhysics/SystemsWync"]
script = ExtResource("38_g8ek6")

[node name="SyWyncSaveConfirmedStates" type="Node" parent="worlds/WorldClient1/GroupPhysics/SystemsWync"]
script = ExtResource("52_65fst")

[node name="SyWyncLatestValue" type="Node" parent="worlds/WorldClient1/GroupPhysics/SystemsWync"]
script = ExtResource("56_x35pt")

[node name="SyWyncXtrap" type="Node" parent="worlds/WorldClient1/GroupPhysics/SystemsWync"]
script = ExtResource("53_qmyp1")

[node name="SyWyncConnectReq" type="Node" parent="worlds/WorldClient1/GroupPhysics/SystemsWync"]
script = ExtResource("58_gjl0a")

[node name="SyWyncReceiveClientInfo" type="Node" parent="worlds/WorldClient1/GroupPhysics/SystemsWync"]
script = ExtResource("55_wsisn")

[node name="SyTicks" type="Node" parent="worlds/WorldClient1/GroupPhysics"]
script = ExtResource("18_oeqdo")

[node name="SyNeteCleanup" type="Node" parent="worlds/WorldClient1/GroupPhysics"]
script = ExtResource("40_dopds")

[node name="GroupProcess" type="Node" parent="worlds/WorldClient1"]
script = ExtResource("32_wj45u")

[node name="SyNeteLoopback" type="Node" parent="worlds/WorldClient1/GroupProcess"]
script = ExtResource("21_rayuf")

[node name="SyNetClockClient" type="Node" parent="worlds/WorldClient1/GroupProcess"]
script = ExtResource("45_6w0w5")

[node name="SyWyncLerp" type="Node" parent="worlds/WorldClient1/GroupProcess"]
script = ExtResource("49_dsdhr")

[node name="SyUserWyncLerpSet" type="Node" parent="worlds/WorldClient1/GroupProcess"]
script = ExtResource("61_cqch1")

[node name="SyBallDraw" type="Node" parent="worlds/WorldClient1/GroupProcess"]
script = ExtResource("26_nb7xe")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ui" parent="CanvasLayer" instance=ExtResource("26_sokx8")]
metadata/_edit_lock_ = true
